Connected DB in App_Data folder
Got the site working when connected to the FifaRankings.mdf file in the
~/App_Data/ folder.

--- a/FifaRankings/Views/Home/Rankings.cshtml
+++ b/FifaRankings/Views/Home/Rankings.cshtml
@@ -12,7 +12,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (RankingLeaderboard p in ViewBag.RankingsLeaderboard)
+        @foreach (FifaRankings.Data.RankingLeaderboard p in ViewBag.RankingsLeaderboard)
         {
         <tr>
             <td>@p.Player</td>
