--- a/FifaRankings/Views/Shared/_Layout.cshtml
+++ b/FifaRankings/Views/Shared/_Layout.cshtml
@@ -22,7 +22,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Log Match", "LogMatch", "Home")</li>
+                    <li>@Html.ActionLink("Results", "Index", "Results")</li>
+                    <li>@Html.ActionLink("Record Match Result", "LogMatch", "Results")</li>
                     @*<li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                 </ul>
