Players CRUD, handicap formula & data
Implemented CRUD for Players entity.
Updated handicap calculation formula.
Updated match log data.

--- a/FifaRankings/Views/Shared/_Layout.cshtml
+++ b/FifaRankings/Views/Shared/_Layout.cshtml
@@ -23,9 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Results", "Index", "Results")</li>
-                    <li>@Html.ActionLink("Record Match Result", "LogMatch", "Results")</li>
-                    @*<li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+                    <li>@Html.ActionLink("Players", "Index", "Players")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
