--- a/FifaRankings/Views/Shared/EditorTemplates/DateTime.cshtml
+++ b/FifaRankings/Views/Shared/EditorTemplates/DateTime.cshtml
@@ -16,7 +16,7 @@ else
     $(document).ready(function () {
         $("#@id").datepicker
             ({
-                dateFormat: 'dd/mm/yy',
+                dateFormat: 'yy/mm/dd',
                 showStatus: true,
                 showWeeks: true,
                 highlightWeek: true,
